--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,31 +47,29 @@ body a, li{
 /* main */
 
 .hero-img{
-    background-image: url("../images/hero_rectangle.png");
+    background-color: var(--darkblue);
     width: 100% !important;
-    /* min-height: 450px !important; */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    min-height: 350px !important;
     
-    border-radius: 50px !important;
+    padding-bottom: 10% !important;
+    border-radius: 40px !important;
 }
-.hero-text h1{
+.hero-index h1{
     font-family: 'Milligram Trial', sans-serif;
 }
 .reuseable{
     color: var(--green) !important;
 }
-.hero-text .animate-text u{
+.hero-index .animate-text u{
     display: inline-block;
     display: none;
 }
 
-.hero-text span u.text-in{
+.hero-index span u.text-in{
 	display: block;
 	animation: textIn .5s ease;
 }
-.hero-text span u.text-out{
+.hero-index span u.text-out{
 	animation: textOut .5s ease;
 }
 @keyframes textIn{
@@ -91,7 +89,7 @@ body a, li{
 
 	}
 }
-.hero-text p{
+.hero-index p{
     font-family: 'Avenir', sans-serif;
     font-size: 1.3rem !important;
     font-weight:100 !important;
@@ -228,8 +226,7 @@ position: absolute;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
-    border-radius: 50px !important;
+    border-radius: 40px !important;
     z-index: 300;
 }
 .apple{
@@ -298,7 +295,7 @@ position: absolute;
     font-weight: 100;
     font-size: 1.2rem;
     color: #7E7E7E;
-    width: 400px;
+    width: 100%;
 }
 .custom__nav-item{
     font-family: 'Avenir', sans-serif;
@@ -454,9 +451,18 @@ footer li a:hover{
 
 @media (min-width: 375px) {
   
-/* .custom-col-4{
-    display: none;
-} */
+    .hero-index p{
+        margin-top: 20px !important ;
+    }
+    .btn-earn{
+        width: 50% !important;
+        font-size: 1rem !important;
+    }
+.btn-custom-2{
+    margin-top: 10px !important;
+    font-size: 1rem !important;
+
+}
 .mission{
     position: absolute;
     top: 40px;
@@ -467,107 +473,71 @@ footer li a:hover{
     top: -20px;
     display: none;
 }
-
-.elipse-img{
+.scribbling-img{
+    position:absolute;
+    top:0px;
+    left: 0%;
+    width:80%;
+}
+.partners-img{
+    width: 70%;
+    
+}
+.unique-partners{
+    width: 50% !important;
+}
+.unique-partners-1{
     width: 100% !important;
-    }
-/* .download-icon{
-    position: absolute;
-    top: 0px;
-    left: 60px;
-    width: 50%;
-    z-index: 10;
+}
 
-} */
-    .apple{
-        top: 151px;
-        left: 60px;
-        width: 25%;
-        
-        }
-    .google{
-        top: 151px;
-        left: 145px;
-        width: 25%;
-    }
-    .why-heading{
-        
-        font-size: 2.3rem;
-    }
-   
-    .why-desc{
-        width: 100%;
-    }
-    .why-img{
-        width: 100%;
-    }
-    .scribbling{
-        top: 210px;
-        left: -80px;
-        z-index: 40;
-        
+.ellipse{
+  display: none !important;
     }
 
-    .img-text{
-        top: 200px;
-        left: 15px;
-        font-size: 1rem;
-        width: 80%;
-        margin-bottom: 10px;
-        
-    }
-    .try-out--text{
-        top: 60px;
-        left: 0px;
-        right: 20px;
-    }
    
-    .try-out--earn{
-        left:0px;
-        width: 100%;
+.why-heading{
+    font-size: 2rem !important;
+}
+.why-desc{
+    font-size: 1.2rem !important;
+    /* text-align: justify !important; */
+    /* width: 300px !important; */
+}
+.appstore-btn{
+    width:40% !important;
+    
+}
+.googleplay-btn{
+    width:40% !important;
+   
+}
+
+.stats-section{
+    margin-top: 2rem !important;
     }
-    .appstore-btn{
-        width: 50%;
-    }
-    .subscribe{
-        border-radius: 100px;
-        
-    }
-    .try-out--img{
-        width: 100%;
-        height: 400px;
-        border-radius: 40px;
-    }
-    .subscribe{
-        border-radius: 40px;
-    }
-    .footer-border {
-        border-radius: 40px !important;
-        
-    }
-    /* faq */
-    .other-question{
-        width: 80%;
-        
-    }
+ 
 }
 
 @media (min-width: 576px){ 
   
- 
-    /* .custom-col-4{
-        display: none;
-    } */
+
+    .partners-img{
+     width: 50% !important;   
+    }
+    .unique-partners{
+        width: 35% !important;
+    }
+    .unique-partners-1{
+        width: 65% !important;
+    }
+    .hero-index{
+        width: 100%;
+        line-height: 30px !important;
+    }
+    .hero-index p{
+        margin-top: 20px !important;
+    }
    
-    .hero-text{
-        width: 100%;
-        line-height: 50px !important;
-        padding-top: 150px !important;
-    }
-    .hero-btn{
-        margin-top: 100px;
-        width: 100%;
-    }
     
     .btn-custom-2 {
         margin-top: 1rem;
@@ -579,11 +549,7 @@ footer li a:hover{
         width: 100%;
     }
     .btn-earn{
-        width: 100% !important;
-        background-color: var(--lightblue) !important;
-        font-family: 'Avenir', sans-serif;
-        font-size: 1.2rem !important;
-        font-weight:200 !important;
+        width: 50% !important;
     }
     .scribbling-img{
         position:absolute;
@@ -598,12 +564,31 @@ footer li a:hover{
         margin-bottom: 10px;
         
     }
+    .why-section{
+        padding-top:0 !important;
+        
+        
+     }
+    .why-desc{
+        text-align: start !important;
+    }
+    .stats-section{
+        margin-top: 3rem !important;
+        }
     .ellipse{
         display: none !important;
         
     }
     .shoppers{
         display: none !important;
+    }
+    .appstore-btn{
+        width:30% !important;
+        
+    }
+    .googleplay-btn{
+        width:30% !important;
+       
     }
      /* faq */
      .other-question{
@@ -613,11 +598,11 @@ footer li a:hover{
 }
 
 @media (min-width: 768px) {
-
-    .hero-text{
+   
+    .hero-index{
         width: 100%;
         /* padding-left: 10%!important; */
-        padding-top: 15% !important;
+        padding-top: 2% !important;
 
     }
     .custom-col-4{
@@ -634,14 +619,14 @@ footer li a:hover{
         width:55%;
     }
     .shoppers{
-
+        display: block;
         position: absolute;
         top: 90px !important;
         left:32%  !important;
         width: 40% !important;
             
     }
-    
+   
     .ellipse{
         display: block !important;
         width: 500px; 
@@ -664,6 +649,7 @@ footer li a:hover{
         font-family: 'Avenir', sans-serif;
         font-size: 1.2rem !important;
         font-weight:200 !important;
+        margin-left: 27px !important;
     }
     .elipse-img{
         width: 80% !important;
@@ -673,6 +659,14 @@ footer li a:hover{
         display:block;
         width: 350px; 
         height: 350px; 
+    }
+    .why-heading{
+        font-size: 3rem;
+       
+    }
+    .why-desc{
+        text-align: justify !important;
+        width: 90% !important;
     }
         
     .get-app{
@@ -684,6 +678,7 @@ footer li a:hover{
     }
             
     .shoppers{
+        display: block !important;
         position: absolute;
         top: 80px;
         left: 25%;
@@ -739,9 +734,29 @@ footer li a:hover{
 }
 
 @media(min-width:992px){
-    .hero-text{
+
+    .sav_earn-img{
+        display: block;
+        position: absolute;
+        width: 55% !important;
+        top: 22% !important;
+        left: 440px !important;
+        }
+    .mission{
+        display: block;
+        position: absolute;
+        width: 30% !important;
+        top: 90% !important;
+        left: 600px !important ;
+        z-index: 50;
+    }
+    .hero-index{
         width: 100%;
-        padding-left: 10% !important;
+        padding-top: 2% !important;
+        padding-left: 8% !important;
+    }
+    .hero-index h1{
+        font-size: 2.8rem !important;
     }
    
    
@@ -757,19 +772,27 @@ footer li a:hover{
     }
     
     .btn-earn{
-        width: 30% !important;
+        width: 20% !important;
         background-color: var(--lightblue) !important;
         font-family: 'Avenir', sans-serif;
         font-size: 1.2rem !important;
         font-weight:200 !important;
+        margin-left: 0 !important;
     }
     
     
     .partners-img{
-        width: 80%;
-        padding: 4rem 0;
+        width: 60% !important;
+        /* padding: 4rem 0; */
+    }
+    .unique-partners{
+        width: 35% !important;
+    }
+    .unique-partners-1{
+        width: 65% !important;
     }
     .shoppers{
+        display: block !important;
         position: absolute;
         top: 80px;
         left:22%  !important;
@@ -827,8 +850,14 @@ footer li a:hover{
         left: 60px;
         
     }
+    
     .appstore-btn{
-        width:20%;
+        width:20% !important;
+        
+    }
+    .googleplay-btn{
+        width:20% !important;
+       
     }
     
     /* footer */
@@ -851,19 +880,19 @@ footer li a:hover{
 
 @media(min-width:1200px){
    
-    .hero-text{
+    .hero-index{
         width: 100%;
         padding-left: 10%!important;
-        padding-top: 15% !important;
+        padding-top: 5% !important;
     
     }
    
     .sav_earn-img{
         display: block;
         position: absolute;
-        width: 50% !important;
-        top: 30% !important;
-        left: 560px !important;
+        width: 55% !important;
+        top: 8% !important;
+        left: 540px !important;
         }
     .mission{
         display: block;
@@ -873,10 +902,20 @@ footer li a:hover{
         left: 680px !important ;
         z-index: 50;
     }
+    .why-desc{
+        font-family: 'Avenir', sans-serif;
+        font-weight: 100;
+        font-size: 1.2rem;
+        color: #7E7E7E;
+        width: 90% !important;
+    }
     
     .partners-img{
         width: 100%;
         padding: 4rem 0;
+    }
+    .unique-partners{
+        width: 50% !important;
     }
     .stats-section{
     margin-top: 10rem !important;
@@ -890,7 +929,7 @@ footer li a:hover{
     }
     
     .btn-earn{
-        width: 30% !important;
+        width: 20% !important;
         background-color: var(--lightblue) !important;
         font-family: 'Avenir', sans-serif;
         font-size: 1.2rem !important;
