shoppersbag ready or live push

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -198,6 +198,7 @@ body a, li{
 
 
 
+
 #member-1:hover ~ .member-1{
     display: block!important;
     
@@ -220,6 +221,12 @@ body a, li{
 #member-7:hover ~ .member-7{
     display: block!important;
 }
+.btn-primary-custom{
+    background-color: var(--darkblue) !important;
+    color: white !important;
+    text-transform: capitalize;
+}
+
 
 .join-team{
     background-color: #F6DB49;
@@ -437,6 +444,7 @@ footer li a:hover{
     .join-team{
         border-radius: 120px;
     }
+   
     .subscribe-text{
         font-size: 1.5rem !important;
     }
@@ -483,8 +491,9 @@ footer li a:hover{
     }
     
     .team-title{
-        font-size: 2.8rem !important;
+        font-size: 2rem !important;
     }
+  
     .team-desc{
      font-size: 1.2rem !important;
     }
