--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,6 +515,10 @@ footer li a:hover{
 .stats-section{
     margin-top: 2rem !important;
     }
+
+.other-question{
+    width: 100% !important;
+}
  
 }
 
