--- a/assets/css/impact.css
+++ b/assets/css/impact.css
@@ -38,12 +38,10 @@ body a, li{
 }
 
 .hero-section{
-    background-image: url('../images/impact/hero-rectangle.png');
+    background-color: var(--darkblue);
+    /* background-image: url('../images/impact/hero-rectangle.png'); */
     width: 100% !important;
     min-height: 700px !important;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     margin: 0 auto;
     border-radius: 80px !important;
     
@@ -190,6 +188,10 @@ footer li a:hover{
 
 
  @media (min-width:375px){
+  
+    .hero-section{
+        margin-top:  10rem !important;
+       }
     .hero-text--heading{
         font-size: 2rem !important;
         width: 80% !important;
@@ -334,6 +336,7 @@ footer li a:hover{
 @media (min-width:1200px){
     
    
+  
     .hero-text--heading span{
       color: transparent;
       text-shadow: 6px -4px 0px white;
