remove for shoppers add env personality

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -597,8 +597,16 @@ video {
   right: -2.5rem;
 }
 
-.bottom-76px {
-  bottom: 4.75rem;
+.-bottom-5 {
+  bottom: -1.25rem;
+}
+
+.-left-1 {
+  left: -0.25rem;
+}
+
+.-right-1 {
+  right: -0.25rem;
 }
 
 .left-0 {
@@ -709,34 +717,6 @@ video {
   bottom: -35rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
-}
-
-.-bottom-7 {
-  bottom: -1.75rem;
-}
-
-.-bottom-4 {
-  bottom: -1rem;
-}
-
-.-bottom-5 {
-  bottom: -1.25rem;
-}
-
-.-left-1 {
-  left: -0.25rem;
-}
-
-.-right-1 {
-  right: -0.25rem;
-}
-
 .z-30 {
   z-index: 30;
 }
@@ -773,6 +753,16 @@ video {
 .my-40 {
   margin-top: 10rem;
   margin-bottom: 10rem;
+}
+
+.my-fiftyPercent {
+  margin-top: 50%;
+  margin-bottom: 50%;
+}
+
+.my-tenPercent {
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 
 .mb-2 {
@@ -904,22 +894,6 @@ video {
   height: 0px;
 }
 
-.h-hundredPercent {
-  height: 100%;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[200\%\] {
-  height: 200%;
-}
-
-.h-\[500\%\] {
-  height: 500%;
-}
-
 .max-h-40 {
   max-height: 10rem;
 }
@@ -932,20 +906,16 @@ video {
   max-height: 25.625rem;
 }
 
+.max-h-eightyPercent {
+  max-height: 80%;
+}
+
 .min-h-full {
   min-height: 100%;
 }
 
 .min-h-200px {
   min-height: 12.5rem;
-}
-
-.min-h-350 {
-  min-height: 21.875rem;
-}
-
-.min-h-\[500\%\] {
-  min-height: 500%;
 }
 
 .w-fortyPercent {
@@ -1045,10 +1015,6 @@ video {
   width: 13rem;
 }
 
-.w-\[500\%\] {
-  width: 500%;
-}
-
 .min-w-full {
   min-width: 100%;
 }
@@ -1098,11 +1064,6 @@ video {
 
 .-rotate-45 {
   --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-y-150 {
-  --tw-scale-y: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2213,6 +2174,11 @@ video {
     bottom: -5rem;
   }
 
+  .sm\:my-40 {
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+  }
+
   .sm\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
@@ -2240,6 +2206,10 @@ video {
 
   .sm\:h-80 {
     height: 20rem;
+  }
+
+  .sm\:max-h-0 {
+    max-height: 0px;
   }
 
   .sm\:w-500 {
@@ -2292,10 +2262,6 @@ video {
 
   .sm\:w-full {
     width: 100%;
-  }
-
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-1 {
@@ -2727,24 +2693,12 @@ video {
     position: absolute;
   }
 
-  .lg\:left-fiftyPercent {
-    left: 50%;
-  }
-
   .lg\:bottom-32 {
     bottom: 8rem;
   }
 
   .lg\:bottom-12 {
     bottom: 3rem;
-  }
-
-  .lg\:left-0 {
-    left: 0px;
-  }
-
-  .lg\:-left-1 {
-    left: -0.25rem;
   }
 
   .lg\:flex {
