--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -729,6 +729,14 @@ video {
   top: 5rem;
 }
 
+.-right-20 {
+  right: -5rem;
+}
+
+.-right-11 {
+  right: -2.75rem;
+}
+
 .z-30 {
   z-index: 30;
 }
@@ -751,6 +759,10 @@ video {
 
 .float-right {
   float: right;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -888,6 +900,14 @@ video {
   height: 0px;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
 .max-h-eightyPercent {
   max-height: 80%;
 }
@@ -1009,12 +1029,20 @@ video {
   width: 13rem;
 }
 
+.w-sixtyPercent {
+  width: 60%;
+}
+
 .min-w-full {
   min-width: 100%;
 }
 
 .min-w-6 {
   min-width: 1.5rem;
+}
+
+.min-w-1\/2 {
+  min-width: 50%;
 }
 
 .max-w-500px {
@@ -1336,6 +1364,14 @@ video {
 
 .rounded-forty {
   border-radius: 2.5rem;
+}
+
+.rounded-eight {
+  border-radius: 0.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border {
@@ -1686,6 +1722,16 @@ video {
   padding-right: 1rem;
 }
 
+.px-tenPixel {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1786,6 +1832,18 @@ video {
   padding-left: 1rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1828,6 +1886,10 @@ video {
 
 .font-avenirMedium {
   font-family: avenir-medium, sans-serif;
+}
+
+.font-avenirBook {
+  font-family: avenir-book, sans-serif;
 }
 
 .text-2xl {
@@ -2432,6 +2494,14 @@ video {
     padding-left: 1.25rem;
   }
 
+  .sm\:pr-2 {
+    padding-right: 0.5rem;
+  }
+
+  .sm\:pr-4 {
+    padding-right: 1rem;
+  }
+
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -2470,6 +2540,11 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 
   .placeholder\:sm\:text-xl::-moz-placeholder {
@@ -2778,6 +2853,10 @@ video {
     padding-top: 5rem;
   }
 
+  .md\:pr-0 {
+    padding-right: 0px;
+  }
+
   .md\:text-left {
     text-align: left;
   }
@@ -2954,6 +3033,10 @@ video {
     width: 75%;
   }
 
+  .lg\:w-thirtyFivePercent {
+    width: 35%;
+  }
+
   .lg\:max-w-2xl {
     max-width: 42rem;
   }
@@ -3110,6 +3193,10 @@ video {
     bottom: -12%;
   }
 
+  .xl\:max-w-3xl {
+    max-width: 48rem;
+  }
+
   .xl\:gap-10 {
     gap: 2.5rem;
   }
@@ -3117,6 +3204,13 @@ video {
   .xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
   }
 }
 
