--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -681,8 +681,8 @@ video {
   left: -0.75rem;
 }
 
-.-right-28 {
-  right: -7rem;
+.-right-11 {
+  right: -2.75rem;
 }
 
 .top-2 {
@@ -713,28 +713,8 @@ video {
   right: -100%;
 }
 
-.-bottom-500 {
-  bottom: -31.25rem;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
 .top-20 {
   top: 5rem;
-}
-
-.-right-20 {
-  right: -5rem;
-}
-
-.-right-11 {
-  right: -2.75rem;
 }
 
 .z-30 {
@@ -900,10 +880,6 @@ video {
   height: 0px;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-80 {
   height: 20rem;
 }
@@ -1029,20 +1005,12 @@ video {
   width: 13rem;
 }
 
-.w-sixtyPercent {
-  width: 60%;
-}
-
 .min-w-full {
   min-width: 100%;
 }
 
 .min-w-6 {
   min-width: 1.5rem;
-}
-
-.min-w-1\/2 {
-  min-width: 50%;
 }
 
 .max-w-500px {
@@ -1366,14 +1334,6 @@ video {
   border-radius: 2.5rem;
 }
 
-.rounded-eight {
-  border-radius: 0.5rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1503,11 +1463,6 @@ video {
   background-color: rgb(249 251 250 / var(--tw-bg-opacity));
 }
 
-.bg-brandPeach3x {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 246 228 / var(--tw-bg-opacity));
-}
-
 .bg-brandGreen4x {
   --tw-bg-opacity: 1;
   background-color: rgb(2 152 52 / var(--tw-bg-opacity));
@@ -1591,6 +1546,26 @@ video {
 .bg-brandBlue4x {
   --tw-bg-opacity: 1;
   background-color: rgb(57 161 255 / var(--tw-bg-opacity));
+}
+
+.bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
+}
+
+.bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
+}
+
+.bg-white\/40 {
+  background-color: rgb(255 255 255 / 0.4);
+}
+
+.bg-white\/70 {
+  background-color: rgb(255 255 255 / 0.7);
+}
+
+.bg-black\/70 {
+  background-color: rgb(0 0 0 / 0.7);
 }
 
 .p-10 {
@@ -1722,16 +1697,6 @@ video {
   padding-right: 1rem;
 }
 
-.px-tenPixel {
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
-}
-
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1830,18 +1795,6 @@ video {
 
 .pl-4 {
   padding-left: 1rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
 }
 
 .text-left {
@@ -2156,6 +2109,11 @@ video {
   background-color: #41a4e6;
   -webkit-transition: 10ms ease-in-out;
   transition: 10ms ease-in-out;
+}
+
+.marketing-thumbnail{
+  background: url('./../images/shoppersbag-thumbnail.png');
+  background-size: contain;
 }
 
 .placeholder\:font-avenirRegular::-moz-placeholder {
@@ -2490,16 +2448,12 @@ video {
     padding-right: 5rem;
   }
 
-  .sm\:pl-5 {
-    padding-left: 1.25rem;
-  }
-
-  .sm\:pr-2 {
-    padding-right: 0.5rem;
-  }
-
   .sm\:pr-4 {
     padding-right: 1rem;
+  }
+
+  .sm\:pl-5 {
+    padding-left: 1.25rem;
   }
 
   .sm\:text-4xl {
@@ -2540,11 +2494,6 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .sm\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
   }
 
   .placeholder\:sm\:text-xl::-moz-placeholder {
@@ -2841,6 +2790,10 @@ video {
     padding-right: 4rem;
   }
 
+  .md\:pr-0 {
+    padding-right: 0px;
+  }
+
   .md\:pt-40 {
     padding-top: 10rem;
   }
@@ -2851,10 +2804,6 @@ video {
 
   .md\:pt-20 {
     padding-top: 5rem;
-  }
-
-  .md\:pr-0 {
-    padding-right: 0px;
   }
 
   .md\:text-left {
@@ -3033,10 +2982,6 @@ video {
     width: 75%;
   }
 
-  .lg\:w-thirtyFivePercent {
-    width: 35%;
-  }
-
   .lg\:max-w-2xl {
     max-width: 42rem;
   }
@@ -3204,13 +3149,6 @@ video {
   .xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-}
-
-@media (min-width: 1536px) {
-  .\32xl\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
   }
 }
 
